[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "hqme"
author = "zeroday0619"
author-email = "zeroday0619_dev@outlook.com"
home-page = "https://github.com/zeroday0619/HQME"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires = [
    "discord.py @ git+https://github.com/Rapptz/discord.py",
    "databases[postgresql]==0.4.3",
    "validator-collection==1.5.0",
    "spotify-uri==1.0.3",
    "pydantic==1.8.2"
]
description-file = "README.md"
requires-python = ">=3.8"

[tool.flit.metadata.urls]
Documentation = "https://docs.hqme.zeroday0619.dev/"

[tool.flit.metadata.requires-extra]
test = [
    "mkdocstrings",
    "pytest >=6.2.4, < 7.0.0",
    "pytest-cov >=2.12.0, < 3.0.0",
    "pytest-asyncio >=0.14.0, < 0.15.0",
    "mypy == 0.812",
    "black == 20.8b1",
    "isort >= 5.0.6, < 6.0.0",
    "flake8 >=3.8.3,< 4.0.0",
    "discord.py @ git+https://github.com/Rapptz/discord.py",
    "databases[postgresql]==0.4.3",
    "validator-collection==1.5.0",
    "spotify-uri==1.0.3",
    "pydantic==1.8.2",
    "autoflake >=1.3.1, < 2.0.0"
]
dev = [
    "mkdocstrings",
    "pytest >=6.2.4, < 7.0.0",
    "pytest-cov >=2.12.0, < 3.0.0",
    "pytest-asyncio >=0.14.0, < 0.15.0",
    "mypy == 0.812",
    "black == 20.8b1",
    "isort >= 5.0.6, < 6.0.0",
    "flake8 >=3.8.3,< 4.0.0",
    "discord.py @ git+https://github.com/Rapptz/discord.py",
    "databases[postgresql]==0.4.3",
    "validator-collection==1.5.0",
    "spotify-uri==1.0.3",
    "pydantic==1.8.2",
    "autoflake >=1.3.1, < 2.0.0"
]
all = [
    "mkdocstrings",
    "pytest >=6.2.4, < 7.0.0",
    "pytest-cov >=2.12.0, < 3.0.0",
    "pytest-asyncio >=0.14.0, < 0.15.0",
    "mypy == 0.812",
    "black == 20.8b1",
    "isort >= 5.0.6, < 6.0.0",
    "flake8 >=3.8.3,< 4.0.0",
    "autoflake >=1.3.1, < 2.0.0",
    "discord.py @ git+https://github.com/Rapptz/discord.py",
    "databases[postgresql]==0.4.3",
    "validator-collection==1.5.0",
    "spotify-uri==1.0.3",
    "pydantic==1.8.2"
]

[tool.isort]
profile = "black"
known_third_party = ["hqme"]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
xfail_strict = true
junit_family = "xunit2"

filterwarnings = [
    "error",
    'ignore:"@coroutine" decorator is deprecated since Python 3\.8, use "async def" instead:DeprecationWarning',
]