[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "hqme"
author = "zeroday0619"
author-email = "zeroday0619_dev@outlook.com"
home-page = "https://github.com/zeroday0619/HQME"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires = [
    "youtube-dl",
    "databases[postgresql]",
    "validator-collection",
    "spotify-uri",
    "pydantic",
    "autoflake"
]
description-file = "README.md"
requires-python = ">=3.10"

[tool.flit.metadata.urls]
Documentation = "https://docs.hqme.zeroday0619.dev/"

[tool.flit.metadata.requires-extra]
test = [
    "mkdocstrings",
    "mkdocs-material",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "mypy",
    "black",
    "isort",
    "flake8",
    "databases[postgresql]",
    "validator-collection>",
    "spotify-uri",
    "pydantic",
    "autoflake"
]
dev = [
    "mkdocstrings",
    "mkdocs-material",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "mypy",
    "black",
    "isort",
    "flake8",
    "databases[postgresql]",
    "validator-collection",
    "spotify-uri",
    "pydantic",
    "autoflake"
]
all = [
    "mkdocstrings",
    "mkdocs-material",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "mypy",
    "black",
    "isort",
    "flake8",
    "databases[postgresql]",
    "validator-collection",
    "spotify-uri",
    "pydantic",
    "autoflake"
]

[tool.isort]
profile = "black"
known_third_party = ["hqme"]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
xfail_strict = true
junit_family = "xunit2"

filterwarnings = [
    "error",
    'ignore:"@coroutine" decorator is deprecated since Python 3\.8, use "async def" instead:DeprecationWarning',
]